fix: no new line for resume section on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -750,6 +750,7 @@ main {
 
 .timeline-list span {
   white-space: nowrap;
+  word-break: keep-all;
   color: var(--vegas-gold);
   font-weight: var(--fw-400);
   line-height: 1.6;
